2001-05-04  Alan Modra  <amodra@one.net.au>

	* gas/i386/katmai.d: Correct pmovmskb and pextrw opcodes.
	* gas/i386/ssemmx2.d: Likewise.  Correct register for pextrw,
	pinsrw, and pmovmskb.
	* gas/i386/sse2.d: Correct register for movmskpd.

2001-03-31  Alan Modra  <alan@linuxcare.com.au>

	* gas/all/cond.s: Add .if .elseif tree.
	* gas/all/cond.d: Match above.

2001-03-24  Alan Modra  <alan@linuxcare.com.au>

	* gas/i386/ssemmx2.s: Change movntq to movntdq.
	* gas/i386/ssemmx2.d: Matching change.

2001-03-19  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* gas/vax/quad.exp: Correct expected result.

2001-03-19  Andreas Schwab  <schwab@suse.de>

	* gas/m68k/pcrel.s: Force alignment to 8 byte boundary to get
	consistent output across targets.
	* gas/m68k/pcrel.d: Adjusted.

2001-03-18  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* gas/mri/mri.exp: Fix test of m6811/m6812 targets.

2001-03-17  Philip Blundell  <philb@gnu.org>

	* gas/vtable/vtable.exp: Don't run tests on AVR.
	* gas/macros/macros.exp: Mark strings test xfail for AVR.

2001-02-23  H.J. Lu  <hjl@gnu.org>

	* gas/ia64/opc-a-err.l: Fix "cmp4.lt.or".

	* gas/ia64/opc-a.pl: Add tests for pseudo-ops for "cmp" and
	"cmp4".
	* gas/ia64/opc-a.s: Rebuilt.
	* gas/ia64/opc-a.d: Likewise.

2001-02-08  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* gas/mri/mri.exp: Don't execute the M68K specific tests 
	on m6811-elf and m6812-elf targets, still run the generic MRI tests.

2001-02-04  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* gas/m68hc11/malis.s: New test to verify compliance with Motorola
	Assembly Language Input Standard.
	* gas/m68hc11/malis.d: New file.
	* gas/m68hc11/malis-include.s: New file.
	* gas/m68hc11/all.exp: Add the new test.

2001-01-12  Alan Modra  <alan@linuxcare.com.au>

	* gas/i386/i386.exp (gas_64_check): Correct target string.
	Use gas_64_check rather than target string to decided whether
	x86_64 checks should run.
